website/versioned_docs/version-0.0.4/api/cloud/cloud.postgres.postgres.md
---
id: version-0.0.4-cloud.postgres.postgres
title: postgres.Postgres() function
hide_title: true
original_id: cloud.postgres.postgres
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [postgres](./cloud.postgres.md) &gt; [Postgres](./cloud.postgres.postgres.md)

## postgres.Postgres() function

An abstract component representing a Postgres database within a Postgres server or service.

<b>Signature:</b>

```typescript
export declare function Postgres(): null;
```
<b>Returns:</b>

`null`

## Remarks

Instance methods:

- connectEnv(): Environment \| undefined

Returns the set of environment variables that have all the information needed for a Postgres client to connect to this database. The returned environment variables are named such that some common Postgres clients can use them directly:

`PGHOST`<!-- -->: The host to connect to.

`PGDATABASE`<!-- -->: The name of the database.

`PGUSER`<!-- -->: Username to use to authenticate to the database server or service.

`PGPASSWORD`<!-- -->: Password to use to authenticate to the database server or service.
